# oss-wishlist-dependency-report

./: .gitignore  LICENSE  README.md  action.yml  index.js  oss-wishlist-report.md  package-lock.json  package.json  pyproject.toml  wishlists-ideal.json  wishlists.json
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  test-run-wishlist-analyzer.yml  test.yml
src/oss_sustainability_analyzer/: __init__.py  analyzer.py  cli.py
tests/: test_analyzer.py  test_cli.py
