[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-sustainability-analyzer"
version = "0.1.0"
description = "A tool to analyze the sustainability and health of open source software projects"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Open Source Wish List"}
]
keywords = ["oss", "sustainability", "analysis", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[project.scripts]
oss-analyzer = "oss_sustainability_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/oss-wish-list/oss-sustainability-analyzer"
Repository = "https://github.com/oss-wish-list/oss-sustainability-analyzer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
